--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,13 @@ doc/api/
 *.js_
 *.js.deps
 *.js.map
+.DS_Store
+.DS_Store
+*.xml
+*.xcconfig
+*.properties
+*.sh
+*.iml
+.DS_Store
+.DS_Store
+.DS_Store
