--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
+  get: ^4.6.5
 
 dev_dependencies:
+  flutter_lints: ^2.0.1
   flutter_test:
     sdk: flutter
-  flutter_lints: ^2.0.0
-
-flutter:
-
