--- a/lib/linter.yaml
+++ b/lib/linter.yaml
@@ -200,7 +200,7 @@ linter:
     unrelated_type_equality_checks: true
     unsafe_html: true
     use_build_context_synchronously: true
-    use_function_type_syntax_for_parameters: true
+    # use_function_type_syntax_for_parameters: true
     use_if_null_to_convert_nulls_to_bools: true
     use_is_even_rather_than_modulo: true
     # - use_key_in_widget_constructors: true
