--- a/.gitignore
+++ b/.gitignore
@@ -32,3 +32,31 @@ doc/api/
 *.h
 *.m
 *.java
+macos/Flutter/ephemeral/flutter_export_environment.sh
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+macos/Runner/AppDelegate.swift
+macos/Runner/DebugProfile.entitlements
+macos/Runner/Info.plist
+macos/Runner/MainFlutterWindow.swift
+macos/Runner/Release.entitlements
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_16.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_32.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_64.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_128.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_256.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_512.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/app_icon_1024.png
+macos/Runner/Assets.xcassets/AppIcon.appiconset/Contents.json
+macos/Runner/Base.lproj/MainMenu.xib
+macos/Runner.xcodeproj/project.pbxproj
+macos/Runner.xcodeproj/project.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+macos/Runner.xcodeproj/xcshareddata/xcschemes/Runner.xcscheme
+macos/Runner.xcworkspace/contents.xcworkspacedata
+macos/Runner.xcworkspace/xcshareddata/IDEWorkspaceChecks.plist
+macos/Flutter/ephemeral/flutter_export_environment.sh
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+.metadata
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+.vscode/launch.json
+macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+macos/Flutter/ephemeral/flutter_export_environment.sh
