--- a/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
+++ b/macos/Flutter/ephemeral/Flutter-Generated.xcconfig
@@ -2,10 +2,12 @@
 FLUTTER_ROOT=/Users/art/flutter
 FLUTTER_APPLICATION_PATH=/Users/art/Documents/GitHub/branvier
 COCOAPODS_PARALLEL_CODE_SIGN=true
+FLUTTER_TARGET=/Users/art/Documents/GitHub/branvier/test/widget/formx_nested.dart
 FLUTTER_BUILD_DIR=build
-FLUTTER_BUILD_NAME=0.1.8
-FLUTTER_BUILD_NUMBER=0.1.8
+FLUTTER_BUILD_NAME=0.2.5
+FLUTTER_BUILD_NUMBER=0.2.5
+DART_DEFINES=RkxVVFRFUl9XRUJfQVVUT19ERVRFQ1Q9dHJ1ZQ==
 DART_OBFUSCATION=false
 TRACK_WIDGET_CREATION=true
 TREE_SHAKE_ICONS=false
-PACKAGE_CONFIG=.dart_tool/package_config.json
+PACKAGE_CONFIG=/Users/art/Documents/GitHub/branvier/.dart_tool/package_config.json
