--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: branvier
 description: A Branvier project.
-version: 0.2.6
+version: 0.3.0
 homepage:
 
 environment:
@@ -10,6 +10,8 @@ environment:
 main: lib/branvier.dart
 
 dependencies:
+  animated_list_plus: ^0.5.0
+  auto_animated_list: ^1.0.4
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
