--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: branvier
 description: A Branvier project.
-version: 0.4.1
+version: 0.5.0
 homepage:
 
 environment:
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
-  get: ^4.6.5
+  get: 5.0.0-release-candidate-4
   mocktail: ^0.3.0
 
 dev_dependencies:
