--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,7 +13,7 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
-  get: 5.0.0-release-candidate-4
+  get: ^4.6.5
   mocktail: ^0.3.0
 
 dev_dependencies:
