--- a/lib/linter.yaml
+++ b/lib/linter.yaml
@@ -23,11 +23,11 @@ linter:
     annotate_overrides: true
     avoid_annotating_with_dynamic: true
     avoid_bool_literals_in_conditional_expressions: true
-    avoid_catches_without_on_clauses: true
+    # avoid_catches_without_on_clauses: true
     avoid_catching_errors: true
     avoid_classes_with_only_static_members: true
     avoid_double_and_int_checks: true
-    avoid_dynamic_calls: true
+    # avoid_dynamic_calls: true
     avoid_empty_else: true
     # avoid_equals_and_hash_code_on_mutable_classes: true
     avoid_escaping_inner_quotes: true
@@ -132,7 +132,7 @@ linter:
     prefer_equal_for_default_values: true
     # - prefer_expression_function_bodies: true
     prefer_final_fields: true
-    prefer_final_in_for_each: true
+    # prefer_final_in_for_each: true
     prefer_final_locals: true
     # - prefer_final_parameters: true
     prefer_for_elements_to_map_fromIterable: true
