--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: branvier
 description: A Branvier project.
-version: 0.5.7
+version: 0.5.8
 homepage:
 
 environment:
@@ -13,6 +13,8 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_hooks: ^0.18.6
+  flutter_localizations:
+    sdk: flutter
   get: ^4.6.5
   mocktail: ^0.3.0
 
