--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   flutter_hooks: ^0.18.6
   flutter_localizations:
     sdk: flutter
+  flutter_modular: ^5.0.3
   get: ^4.6.5
   mocktail: ^0.3.0
 
