--- a/lib/linter.yaml
+++ b/lib/linter.yaml
@@ -165,7 +165,7 @@ linter:
     sized_box_shrink_expand: true
     slash_for_doc_comments: true
     sort_child_properties_last: true
-    sort_constructors_first: true
+    # sort_constructors_first: true
     # - sort_pub_dependencies: true
     sort_unnamed_constructors_first: true
     test_types_in_equals: true
