--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,7 +21,7 @@ dependencies:
   #Core
   flutter_localizations:
     sdk: flutter
-  flutter_modular: ^6.0.0-beta.1
+  flutter_modular:
   getx_lite: ^4.6.5
   mocktail: ^0.3.0
 
