--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,14 +15,13 @@ dependencies:
   flutter_hooks: ^0.18.6
 
   #Extensions
-  dartx: ^1.1.0 
-  flutter_animate: ^4.1.1+1 
+  dartx:
+  flutter_animate:
 
   #Core
   flutter_localizations:
     sdk: flutter
   flutter_modular:
-  getx_lite: ^4.6.5
   mocktail: ^0.3.0
 
 dev_dependencies:
