--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
     sdk: flutter
   flutter_modular:
   mocktail: ^0.3.0
+  flutter_spinkit: ^5.2.0
 
 dev_dependencies:
   flutter_lints: ^2.0.1
