Linter update for Dart 3.0

--- a/lib/linter.yaml
+++ b/lib/linter.yaml
@@ -133,7 +133,7 @@ linter:
     # - prefer_expression_function_bodies: true
     prefer_final_fields: true
     # prefer_final_in_for_each: true
-    prefer_final_locals: true
+    # prefer_final_locals: true
     # - prefer_final_parameters: true
     prefer_for_elements_to_map_fromIterable: true
     prefer_foreach: true
