--- a/lib/linter.yaml
+++ b/lib/linter.yaml
@@ -56,7 +56,7 @@ linter:
     avoid_slow_async_io: true
     avoid_type_to_string: true
     avoid_types_as_parameter_names: true
-    avoid_types_on_closure_parameters: true
+    # avoid_types_on_closure_parameters: true
     avoid_unnecessary_containers: true
     avoid_unused_constructor_parameters: true
     # - avoid_void_async: true
@@ -137,7 +137,7 @@ linter:
     # - prefer_final_parameters: true
     prefer_for_elements_to_map_fromIterable: true
     prefer_foreach: true
-    prefer_function_declarations_over_variables: true
+    # prefer_function_declarations_over_variables: true
     prefer_generic_function_type_aliases: true
     prefer_if_elements_to_conditional_expressions: true
     prefer_if_null_operators: true
